# spark-map

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PACKAGING_GUIDE.md  README.md  pyproject.toml
spark_map/: __init__.py
spark_map/cli/: __init__.py  main.py
spark_map/core/: __init__.py  analyzer.py  code_context.py  findings.py  parser.py  report.py
spark_map/core/detectors/: __init__.py  base.py  driver.py  io.py  partition.py  shuffle.py  skew.py  spill.py
spark_map/explain/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
spark_map/models/: __init__.py  schemas.py
spark_map/render/: __init__.py  html.py  markdown.py
tests/: __init__.py  test_cli.py  test_detectors.py  test_parser.py
tests/fixtures/: sample_eventlog.json
